--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -32,8 +32,8 @@ nav {
 	a {
 		margin: 0 3px;
 		padding: 20px 10px;
-		border-bottom: 1px solid rgba(255,255,255,0);
-		color: rgba(255,255,255,.8);
+		border-bottom: 1px solid rgba(0,0,0,0);
+		color: rgba(0,0,0,.8);
 		transition: .2s ease-in-out;
 		display: none;
 
@@ -63,8 +63,8 @@ nav {
 
 	a:hover {
 
-		border-bottom: 1px solid rgba(255,255,255,.3);
-		color: #fff;
+		border-bottom: 1px solid rgba(0,0,0,.3);
+		color: #000000;
 	}
 
 	@media #{$mid-point} {
@@ -73,14 +73,13 @@ nav {
 			border-radius: 5px;
 
 			&:hover {
-				background: #fff;
 				color: $brand-color;
 			}
 		}
 	}
 
 	a.active {
-		color: #fff;
+		color: #000000;
 	}
 
 }
