--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -62,9 +62,8 @@ nav {
 	}
 
 	a:hover {
-
 		border-bottom: 1px solid rgba(0,0,0,.3);
-		color: #000000;
+		color: #777;
 	}
 
 	@media #{$mid-point} {
@@ -73,7 +72,8 @@ nav {
 			border-radius: 5px;
 
 			&:hover {
-				color: $brand-color;
+				background: $brand-color;
+				color: #fff;
 			}
 		}
 	}
