--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 		{% seo %}
 		{% feed_meta %}
-
+		<meta name="google-site-verification" content="lcmmWBET04PpqagYne-YB0Un9wTdG5p942cuYQxTaRU" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 
