[HANDS-ON] - update logos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
 		{% feed_meta %}
 		<meta name="google-site-verification" content="lcmmWBET04PpqagYne-YB0Un9wTdG5p942cuYQxTaRU" />
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		<link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/images/favicon-raileurope.svg">
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.png" alt="Rail Europe Logo" width="95" height="33" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" alt="Rail Europe Logo" width="95" height="33" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
